Making animation delete and create posts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-scripts": "^2.1.8"
+    "react-scripts": "^2.1.8",
+    "react-transition-group": "^4.4.5"
   }
 }
