--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.4.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "^2.1.8",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.4"
